components/WhiteBoard/ToolSelector/toolSelector.module.css
.container {
  background-color: #00000020;
  display: flex;
  flex-direction: row;
  align-items: center;
  padding-left: 10px;
  gap: 10px;
  height: 46px;
  box-sizing: border-box;
}

.buttonContainer {
  box-sizing: border-box;
  border-radius: 50%;
  cursor: default;
  width: 33px;
  height: 33px;
  color: var(--background);
  background-color: transparent;
}

.buttonSelection {
  color: var(--primary-dark);
  background-color: var(--background);
}

.icon {
  line-height: 33px;
  width: 100%;
  text-align: center;
}

